[tool.poetry]
name = "virtual-pet"
version = "0.1.0"
description = ""
authors = ["filosfino <github@filosfino.com>"]
readme = "README.md"
packages = [{include = "virtual_pet"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pillow = "^9.5.0"
numpy = "^1.24.3"
opencv-python = "^4.7.0.72"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
